# smart-stock-ordering-clean

./: .gitignore  AI_INTEGRATION_RESEARCH.md  BUG_FIXES_SUMMARY.md  BranchSalesAnalysisDepartment (3).csv  BranchSalesAnalysisDepartment (4).xls  CATEGORIES_FIXED.md  CATEGORIES_ISSUES_FIXED.md  CATEGORIES_SIMPLIFIED.md  CATEGORIES_TABLE_SYSTEM.md  CATEGORY_BASED_INVENTORY_SYSTEM.md  CATEGORY_SYSTEM_GUIDE.md  COMPLETE_TESTING_GUIDE.md  COMPREHENSIVE_INVENTORY_SYSTEM_SPEC.md  COMPREHENSIVE_RESTAURANT_SYSTEM.md  CUSTOM_API_SUMMARY.md  DASHBOARD_FUNCTIONALITY_SUMMARY.md  DEPLOYMENT_FIX.md  ENVIRONMENT_SETUP.md  EXCEL_CONVERSION_GUIDE.md  FIREBASE_DEBUG_GUIDE.md  FIREBASE_QUICK_START.md  FIREBASE_SECURITY_GUIDE.md  FIREBASE_SETUP.md  FRONTEND_DEPLOYMENT.md  FRONTEND_ERROR_RESOLUTION.md  FRONTEND_FIXES.md  INTEGRATIONS_SETUP.md  MENU_DATA_IMPORT_COMPLETE.md  MENU_DATA_IMPORT_GUIDE.md  MULTI_BUSINESS_CATEGORIES_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  POS_ENVIRONMENT_SETUP.md  POS_INTEGRATION_COMPLETE.md  POS_INTEGRATION_GUIDE.md  PYTHON_VERSION_FIX.md  PYTHON_VERSION_FIX_SUMMARY.md  PYTHON_VERSION_RESOLUTION.md  QUICK_API_SETUP.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  (+33 more)
backend/: CUSTOM_API_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  FIREBASE_INDEXES_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  SUPPLIER_INTEGRATIONS_TESTING.md  ai_service.py  app.py  build.sh  config.env.example  convert_excel_to_csv.py  database_schema.sql  env.example  examine_excel.py  examine_excel_openpyxl.py  examine_excel_xlrd.py  extract_firebase_env.py  pyproject.toml  (+19 more)
(+124 files in other folders)
