[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-stock-ordering-api"
version = "1.0.0"
description = "Smart Stock Ordering API with AI-powered forecasting"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.7.0",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.16.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "prophet>=1.1.5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "openpyxl>=3.1.2",
    "redis>=5.0.1",
    "aiohttp>=3.9.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.130.0",
    "twilio>=9.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-dir]
"" = "."